[package]
name = "parse"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.4"
tokenize = { path = "../tokenize"}


[lib]
crate-type = ["cdylib", "rlib"]
name = "prase"
path = "src/lib.rs"